fixing body overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ path {
 }
 
 #scrollblock-one {
-  position:relative !important;
+  
   
 }
 
